--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,20 @@ nav{
 }
 
 .itemContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   height: 50px;
   background-color: crimson;
+  border-style: solid;
+}
+
+.cartItemContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  background-color: cornflowerblue;
   border-style: solid;
 }
 
@@ -44,4 +56,8 @@ nav{
 .Cart {
   width: 50%;
   float: right;
+}
+
+#submitButton {
+  margin-top: 100px;
 }
